# back-riesgos

./: .env.example  Dockerfile  README.md  alembic.ini  documentacion.txt  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 3490017950bd_hacer_control_code_nullable.py  59eeb8bed4c9_add_missing_user_columns.py  6a74d8c18b08_add_forms_module.py  9330b2de4dcf_añadir_reviewed_at_a_control.py  9eda327c842e_create_initial_tables.py  b7d4f6b91551_revisión_del_modelo_de_riesgo_y_adición_.py  b8a1c12b2873_add_full_name_column_to_user_model.py  e4d8f9c12a3b_add_assigned_to_field.py
app/: initial_data.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: areas.py  controls.py  example.py  forms.py  login.py  organizations.py  risks.py  users.py
app/core/: config.py  security.py
app/crud/: crud_area.py  crud_control.py  crud_form.py  crud_organization.py  crud_risk.py  crud_user.py
app/db/: base.py
app/db/models/: __init__.py  activity_log.py  area.py  asset.py  control.py  form.py  organization.py  risk.py  risk_control.py  role.py  user.py
app/middlewares/: custom_middlewares.py
app/schemas/: __init__.py  area.py  control.py  example.py  form.py  organization.py  risk.py  submission.py  user.py
docs/: architecture.md
tests/: conftest.py
tests/api/v1/: test_areas.py  test_controls.py  test_example.py  test_login.py  test_organizations.py  test_risks.py  test_users.py
tests/utils/: user.py  utils.py
